Add support for `PropertyValueConverters`.
Closes: #3596
Original pull request: #3982.

--- a/src/main/asciidoc/reference/mapping.adoc
+++ b/src/main/asciidoc/reference/mapping.adoc
@@ -900,3 +900,4 @@ Declaring these beans in your Spring ApplicationContext causes them to be invoke
 include::unwrapping-entities.adoc[]
 
 include::mongo-custom-conversions.adoc[]
+include::mongo-property-converters.adoc[]
