--- a/src/main/asciidoc/reference/mongo-repositories.adoc
+++ b/src/main/asciidoc/reference/mongo-repositories.adoc
@@ -281,6 +281,10 @@ lower / upper bounds (`$gt` / `$gte` & `$lt` / `$lte`) according to `Range`
 | `Exists`
 | `findByLocationExists(boolean exists)`
 | `{"location" : {"$exists" : exists }}`
+
+| `IgnoreCase`
+| `findByFirstnameIgnoreCase(String firstname)`
+| `{"firstname" : {"$strcasecmp" : firstname }}`
 |===
 
 NOTE: If the property criterion compares a document, the order of the fields and exact equality in the document matters.
