Update spring.io project urls.
This commit updates outdated projects.spring.io links to spring.io/projects.

Closes: #4042

--- a/src/main/asciidoc/reference/mapping.adoc
+++ b/src/main/asciidoc/reference/mapping.adoc
@@ -162,7 +162,7 @@ calling `get()` before the actual conversion
 
 | `URL`
 | converter
-| `{"website" : "https://projects.spring.io/spring-data-mongodb/" }`
+| `{"website" : "https://spring.io/projects/spring-data-mongodb/" }`
 
 | `Locale`
 | converter
