--- a/src/main/asciidoc/reference/mongo-repositories.adoc
+++ b/src/main/asciidoc/reference/mongo-repositories.adoc
@@ -2,8 +2,6 @@
 = MongoDB Repositories
 
 [[mongo-repo-intro]]
-== Introduction
-
 This chapter points out the specialties for repository support for MongoDB. This chapter builds on the core repository support explained in <<repositories>>. You should have a sound understanding of the basic concepts explained there.
 
 [[mongo-repo-usage]]
@@ -292,13 +290,13 @@ NOTE: If the property criterion compares a document, the order of the fields and
 [[mongodb.repositories.queries.update]]
 === Repository Update Methods
 
-The keywords in the preceding table can also be used to create queries that identify matching documents for running updates on them.
-The actual update action is defined via the `@Update` annotation on the method itself as shown in the snippet below. +
-Please note that the naming schema for derived queries starts with `find`.
-Using _update_ (as in `updateAllByLastname(...)`) is only allowed in combination with `@Query`.
+You can also use the keywords in the preceding table to create queries that identify matching documents for running updates on them.
+The actual update action is defined by the `@Update` annotation on the method itself, as the following listing shows.
+Note that the naming schema for derived queries starts with `find`.
+Using `update` (as in `updateAllByLastname(...)`) is allowed only in combination with `@Query`.
 
-The update is applied to *all* matching documents and it is *not* possible to limit the scope by passing in a `Page` nor using any of the <<repositories.limit-query-result,limiting keywords>>. +
-The return type can be either `void` or a _numeric_ type, such as `long` which holds the number of modified documents.
+The update is applied to *all* matching documents and it is *not* possible to limit the scope by passing in a `Page` or by using any of the <<repositories.limit-query-result,limiting keywords>>.
+The return type can be either `void` or a _numeric_ type, such as `long`, to hold the number of modified documents.
 
 .Update Methods
 ====
@@ -326,18 +324,15 @@ public interface PersonRepository extends CrudRepository<Person, String> {
   void updateAllByLastname(String lastname, int increment); <6>
 }
 ----
-<1> The filter query for the update is derived from the method name. The update is as is and does not bind any parameters.
-<2> The actual increment value is defined by the _increment_ method argument that is bound to the `?1` placeholder.
-<3> It is possible to use SpEL for parameter binding.
+<1> The filter query for the update is derived from the method name. The update is "`as is`" and does not bind any parameters.
+<2> The actual increment value is defined by the `increment` method argument that is bound to the `?1` placeholder.
+<3> Use the Spring Expression Language (SpEL) for parameter binding.
 <4> Use the `pipeline` attribute to issue <<mongo-template.aggregation-update,aggregation pipeline updates>>.
 <5> The update may contain complex objects.
 <6> Combine a <<mongodb.repositories.queries.json-based,string based query>> with an update.
 ====
 
-[WARNING]
-====
-Repository updates do not emit persistence nor mapping lifecycle events.
-====
+WARNING: Repository updates do not emit persistence nor mapping lifecycle events.
 
 [[mongodb.repositories.queries.delete]]
 === Repository Delete Queries
