--- a/src/main/asciidoc/preface.adoc
+++ b/src/main/asciidoc/preface.adoc
@@ -49,6 +49,7 @@ In terms of document stores, you need at least version 3.6 of https://www.mongod
 The following compatibility matrix summarizes Spring Data versions to MongoDB driver/database versions.
 Database versions show the highest supported server version that pass the Spring Data test suite.
 You can use newer server versions unless your application uses functionality that is affected by <<compatibility.changes,changes in the MongoDB server>>.
+See also the https://www.mongodb.com/docs/drivers/java/sync/current/compatibility/[official MongoDB driver compatibility matrix] for driver- and server version compatibility.
 
 [cols="h,m,m,m", options="header"]
 |===
@@ -57,6 +58,16 @@ You can use newer server versions unless your application uses functionality tha
 |Spring Data MongoDB
 |Driver Version
 |Server Version
+
+|2021.2
+|3.4.x
+|4.6.x
+|5.0.x
+
+|2021.1
+|3.3.x
+|4.4.x
+|5.0.x
 
 |2021.0
 |3.2.x
