Upgrade to Micrometer 1.10.0-SNAPSHOT.
Closes #4151.

--- a/src/main/asciidoc/reference/observability.adoc
+++ b/src/main/asciidoc/reference/observability.adoc
@@ -3,6 +3,8 @@
 [[observability]]
 == Observability metadata
 
+include::{root-target}_conventions.adoc[]
+
 include::{root-target}_metrics.adoc[]
 
 include::{root-target}_spans.adoc[]
